# MrProgSwitchWorker

./: MANIFEST.in  install.sh  pyproject.toml  update.sh
.github/workflows/: deploy.yml
src/mrprog/worker/: auto_trade_base.py  auto_trader.py  steam_auto_trader.py  switch_auto_trader.py  trade_worker.py
src/mrprog/worker/support_files/: copy_save.py  custom_SpecialK.ini  decrypt_save.py  install_windows.ps1  run_steam_worker_bn3.ps1  run_steam_worker_bn4.ps1  run_steam_worker_bn5.ps1  run_steam_worker_bn6.ps1  strip_steamid.py
tests/: mock_auto_trader.py  test_graph_search.py  test_trade_worker.py
